# jaseci

./: .flake8  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Dockerfile.test  LICENSE  README.md  conftest.py  gen_parser.sh  jac_unified.py  main.py  mypy.ini  posonly_args.jac  pyproject.toml  pytest.ini  ruff.toml  t.js
docs/: .gitignore  jac_syntax_highlighter.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/book/: .gitignore  book.bib  book.sty  book.synctex(busy)  book.tex  build.sh  cover.tex  play.jac  setup.sh
docs/book/chapters/: advanced_osp.tex  agentic_ai_example.tex  ai_constructs.tex  beyond_oop.tex  introduction.tex  jacing_python.tex  scale_constructs.tex  superset_python.tex
docs/book_html/: book.css  book.html
docs/docs/: extra.css  index.html  index.md  jac-client  landing.css
docs/docs/communityhub/: breaking_changes.md  content_pieces.md  projects.md  release_notes.md
docs/docs/examples/: chapter_10_school.jac
docs/docs/internals/: client_bundle_language_features.md  contrib.md  jac_import_patterns.md  jac_import_patterns_proposal.md  jac_plugins.md  js_compilation_impl_notes.md  jsx_client_serv_design.md  language_evolution_transparent_runtime.md  plugin_documentation.md  refs_coverage_report.md
docs/docs/jac_book/: chapter_1.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_16.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_2.md  chapter_20.md  chapter_21.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md  index.md
docs/docs/js/: feedback.js  jac.monarch.js  landing.js  pyodide-worker.js  run-code.js
docs/docs/learn/: beginners_guide_to_jac.md  debugger.md  dspfoundation.md  example.md  getting_started.md  installation.md  introduction.md  jac-lens.md  jac_coding_manual.md  jac_in_a_flash.md  jac_playground.md  keywords.md  library_mode.md  quick_reference.md  quickstart.md  research.md  superset_python.md  syntax_quick_reference.md  tool_suite.md  tour.md
docs/docs/playground/: README.md  index.html  jac_examples.json  language-configuration.json
docs/overrides/partials/: footer.html
docs/scripts/: handle_jac_compile_data.py  mkdocs_serve.py
jac/: .gitignore  .pre-commit-hooks.yaml  CHANGELOG  README.md  a.py  b.py  main.jac  mypy.ini  original_littlex.js  original_runtime.js  pyproject.toml  pytest.ini  requirements-vendor.in  setup.py  sitecustomize.py
jac-byllm/: README.md  pyproject.toml
jac-byllm/byllm/: __init__.py  lib.jac  lib.py  llm.jac  llm.py  llm_connector.py  mtir.jac  mtir.py  plugin.jac  plugin.py  schema.jac  schema.py  types.jac  types.py
jac-byllm/byllm/llm.impl/: basellm.impl.jac  mockllm.impl.jac  model.impl.jac
jac-byllm/byllm/mtir.impl/: mtir.impl.jac
jac-byllm/byllm/schema.impl/: schema.impl.jac
jac-byllm/byllm/types.impl/: media.impl.jac  message.impl.jac  tool.impl.jac  toolcall.impl.jac
jac-byllm/deprecation/: README.md  pyproject.toml
jac-byllm/deprecation/mtllm/: __init__.py
jac-byllm/examples/: debate_agent.jac  essay_review.jac  genius_lite.jac  joke_gen.jac  personality_finder.jac  text_to_type.jac  wikipedia_react.jac
jac-byllm/examples/agentic_ai/: friendzone_lite.jac  genius_lite.jac  task_manager.jac
jac-byllm/examples/core_examples/: level_genarator.jac  personality_finder.jac
jac-byllm/examples/microbenchmarks/: essay_review.jac  expert_answer.jac  grammar_checker.jac  joke_gen.jac  odd_word_out.jac  text_to_type.jac  translator.jac
jac-byllm/examples/tool_calling/: debate_agent.jac  fantasy_trading_game.jac  marketing_agency.jac  wikipedia_react.jac
jac-byllm/examples/vision/: math_solver.jac  mugen.jac  personality_finder.jac  receipt_analyzer.jac
jac-byllm/scripts/: __init__.py  gh_release.py
jac-byllm/tests/: test_byllm.py  test_schema.jac
jac-byllm/tests/fixtures/: by_expr.jac  demo_real_streaming.jac  enum_no_value.jac  enum_type_with_int.jac  image_test.jac  image_types.jac  llm_mail_summerize.jac  llm_params.jac  llm_semstrings.jac  method_incl_ctx.jac  method_tool.jac  python_lib_mode.py  streaming_output.jac  streaming_with_react.jac  webp_support_test.jac  with_llm_function.jac  with_llm_image.jac  with_llm_lower.jac  with_llm_method.jac  with_llm_type.jac  with_llm_video.jac
jac-client/: README.md  ROADMAP.md  TODO.md  architecture.md  concerns.md  import-system.md  pyproject.toml  test_jac_init.py
jac-client/jac_client/docs/: README.md  advanced-state.md  imports.md  lifecycle-hooks.md  routing.md  working-with-ts.md
jac-client/jac_client/examples/: littleX_single_nodeps.jac
jac-client/my-app/: README.md  app.jac  package-lock.json
jac-mtllm/: README.md  pyproject.toml
jac-mtllm/byllm/: __init__.py  llm.py  mtir.py  types.py
jac-mtllm/examples/: debate_agent.jac  essay_review.jac  expert_answer.jac  fantasy_trading_game.jac  grammar_checker.jac  inherit_basellm.jac  joke_gen.jac  level_genarator.jac  marketing_agency.jac  odd_word_out.jac  personality_finder.jac  test.jac  text_to_type.jac  translator.jac  wikipedia_react.jac
jac-mtllm/mtllm/: __init__.py  aott.py  llm.py  llm_connector.py  plugin.py  schema.py  semtable.py  types.py  utils.py
jac-mtllm/scripts/: __init__.py  gh_release.py
jac-mtllm/tests/: test_jaclang.py  test_mtllm.py  test_schema.jac
jac-scale/: README.md  pyproject.toml
jac-scale/jac_scale/: context.jac  context.py  memory_hierarchy.jac  memory_hierarchy.py  plugin.py  serve.jac  serve.py
jac-streamlit/: README.md  pyproject.toml  streamlit.md
jac-streamlit/jaclang_streamlit/: __init__.py  commands.py  dot_viewer.jac  dot_viewer.py  test_app.jac  test_app.py
jac-streamlit/tests/: test_jac_streamlit.py
jac/.github/: CODE_OF_CONDUCT.md
jac/docs/: jsx_webpage_generation_design.md
jac/examples/: doctor.jac
jac/jaclang/: __init__.py  __main__.py  lib.py  settings.py
jac/jaclang/cli/: cli.md  (+2 more)
jac/scripts/: __init__.py  check.sh  clean_jac_gen.sh  contributor_setup.sh  gh_release.py  pypi_push.sh  vendor.sh
jaseci-package/: README.md  pyproject.toml
(+1629 files in other folders)
