[project]
name = "jac-streamlit"
version = "0.0.5"
description = "Streamlit integration plugin for Jac programming language - enables running and visualizing Jac applications in Streamlit"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = ["jac", "jaclang", "jaseci", "streamlit", "visualization", "graph", "object-spatial"]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.9.0",
    "streamlit>=1.38.0",
    "pydot>=3.0.1",
    "streamlit-agraph>=0.0.45",
]

[project.urls]
Repository = "https://github.com/jaseci-labs/jaseci"
Homepage = "https://jac-lang.org"
Documentation = "https://jac-lang.org"

[project.entry-points.jac]
streamlit = "jaclang_streamlit.commands:JacCmd"

[tool.setuptools.packages.find]
include = ["jaclang_streamlit*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
