[project]
name = "jaclang"
version = "0.9.3"
description = "Jac is a unique and powerful programming language that extends Python, offering an unprecedented level of awesomenss."
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "python",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.11"
dependencies = []
# Note: lark, interegular, pluggy, pygls are vendored

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://docs.jaseci.org"

[project.scripts]
jac = "jaclang.cli.cli:start_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
]

[tool.setuptools.packages.find]
include = ["jaclang*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.lark", "*.pyi", "py.typed"]
jaclang = ["sitecustomize.py"]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
