[project]
name = "mtllm"
version = "0.4.3"
description = "DEPRECATED: install `byllm` instead."
authors = [
    { name = "Jason Mars", email = "jason@mars.ninja" }
]
maintainers = [
    { name = "Jason Mars", email = "jason@mars.ninja" }
]
license = "MIT"
readme = "README.md"
keywords = ["llm", "jaclang", "jaseci", "byLLM"]
dependencies = [
    "byllm>=0.4.3"
]